[gd_scene load_steps=7 format=3 uid="uid://07b5rvevxken"]

[ext_resource type="Script" uid="uid://br28e8eupw0yk" path="res://script/main_menu.gd" id="1_87ipw"]
[ext_resource type="Texture2D" uid="uid://ch7h74hd7tawj" path="res://Image/BackGround/Menu.jpg" id="1_ftydy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87ipw"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 10
border_color = Color(0.631373, 0.631373, 0.631373, 1)

[sub_resource type="Theme" id="Theme_hii65"]
Button/styles/normal = SubResource("StyleBoxFlat_87ipw")
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqsxi"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 10
border_color = Color(0.629675, 0.629675, 0.629674, 1)

[sub_resource type="Theme" id="Theme_pvidh"]
Button/styles/hover = null
Button/styles/normal = SubResource("StyleBoxFlat_kqsxi")
Button/styles/pressed = null

[node name="Main_Menu" type="Node2D"]
script = ExtResource("1_87ipw")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(959, 539)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ftydy")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -90.0
offset_right = 432.0
offset_bottom = 195.0
grow_vertical = 2
scale = Vector2(1.2, 1.2)
theme_override_constants/separation = 30

[node name="play" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme = SubResource("Theme_hii65")
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="setting" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme = SubResource("Theme_pvidh")
theme_override_font_sizes/font_size = 30
text = "SETTING"

[node name="quit" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme = SubResource("Theme_pvidh")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[connection signal="pressed" from="Control/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/quit" to="." method="_on_quit_pressed"]
